# video2gif

./: .gitignore  pyproject.toml  test.py
gifmak3r/: main.py
video2gif/: main.py
